<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="45sp">
    </TextView>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:minWidth="200dp"
        android:layout_height="65dp">

        <Button
            android:id="@+id/upperBodyButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/teal_700"
            android:text="@string/upper_body"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/lowerBodyButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/lower_body"
            android:textColor="@color/white"
            android:backgroundTint="@color/teal_200"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/coreButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/core"
            android:layout_margin="5dp"
            android:backgroundTint="@color/purple_200"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/cardioButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/cardio"
            android:backgroundTint="@color/purple_500"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/favorite"
            android:textSize="35sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:id="@+id/favoriteText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </TextView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textSize="35sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="292dp"/>

        <Button
            android:id="@+id/dateSubmit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/submit"
            android:backgroundTint="@color/teal_200" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:baselineAligned="false">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="13sp"/>

        <Button
            android:id="@+id/dateNavButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/black"
            android:text="@string/dates"
            android:textColor="@color/white"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/timerNavButton"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:textSize="13sp"
            style="?android:attr/buttonBarButtonStyle"
            android:backgroundTint="@color/black"
            android:text="@string/timer"
            android:textColor="@color/white"
            android:layout_margin="1dp"/>
    </LinearLayout>


</LinearLayout>