<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cardio"
        android:textSize="50sp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginStart="11dp"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/treadmill"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="13sp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/treadmill"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/favoriteTreadmill"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/favorite"
                android:textSize="11sp"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/eliptical"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:textSize="13sp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/elliptical"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/favoriteElliptical"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/favorite"
                android:textSize="11sp"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/bike"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/bike"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/favoriteBike"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:text="@string/favorite"
                android:textSize="11sp"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/return_Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/return_button"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>